Refactor MockTranscriptionService