@@ -10,8 +10,8 @@ import java.io.IOError;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -25,11 +25,10 @@ public class MockTranscriptionService extends TranscriptionService
   private final HttpServer server;
 
 
-  public MockTranscriptionService( String accessKey,
+  public static MockTranscriptionService newInstance( String accessKey,
     FutureCallback<SttResponse> resultHandler, STT stt )
   {
-    super(accessKey, resultHandler);
-
+    URI apiBase;
     HttpServer server;
     try
     {
@@ -38,17 +37,11 @@ public class MockTranscriptionService extends TranscriptionService
       server.createContext(
         DEFAULT_API_BASE.getPath(), new MockSpeechToTextHandler(stt));
       InetSocketAddress addr = server.getAddress();
-      try {
-        setApiBase(new URL(
-          "http", addr.getHostString(), addr.getPort(),
-          DEFAULT_API_BASE.getPath()));
-      } catch (MalformedURLException ex) {
-        throw new AssertionError(ex);
-      }
-      logger.log(Level.FINER, "Running {0} at {1}",
-        new Object[]{ getClass().getSimpleName(), getApiBase() });
+      apiBase = new URI(
+        "http", null, addr.getHostString(), addr.getPort(),
+        DEFAULT_API_BASE.getPath(), null, null);
     }
-    catch (IllegalArgumentException ex)
+    catch (IllegalArgumentException | URISyntaxException ex)
     {
       throw new AssertionError(ex);
     }
@@ -57,10 +50,20 @@ public class MockTranscriptionService extends TranscriptionService
       throw new IOError(ex);
     }
 
+    return new MockTranscriptionService(server, apiBase, accessKey,
+      resultHandler);
+  }
+
+
+  protected MockTranscriptionService( HttpServer server, URI apiBase,
+    String accessKey, FutureCallback<SttResponse> resultHandler )
+  {
+    super(apiBase, accessKey, resultHandler);
+
     logger.log(Level.CONFIG,
       "You set your Google API access key to \"{0}\"; " +
         "speech transcription is performed by {1}",
-      new Object[]{accessKey, this.getClass().getCanonicalName()});
+      new Object[]{ accessKey, getClass().getName() });
 
     server.start();
     this.server = server;
